<resources>
    <string name="app_name">eBiblio</string>
    <string name="action_settings">Wyloguj</string>
    <string name="search">Wyszukaj</string>
    <string name="image">image</string>
    <string name="title_activity_login">Zaloguj się</string>
    <string name="Nowości">Nowości</string>
    <string name="eKsiaznica">eKsiążnica</string>
    <string name="opis">APLIKACJA PRZEZNACZONA DLA CZYTELNIKÓW KSIĄŻNICY POMORSKIEJ W SZCZECINIE</string>
    <string name="phaslo">Przypomnij hasło</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło (opcjonalne)</string>
    <string name="action_sign_in">Zaloguj się lub zarejestruj</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="error_invalid_email">Adres e-mail jest nieprawidłowy</string>
    <string name="error_invalid_password">Hasło jest zbyt krótkie</string>
    <string name="error_incorrect_password">Hasło jest nieprawidłowe</string>
    <string name="error_field_required">To pole jest obowiązkowe</string>
    <string name="permission_rationale">"Pozwolenie na kontakt jest niezbędne w celu otrzymywania
        od nas wiadomości."</string>
</resources>
